tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__graphics3d_primitives__graphics3d_background.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics3D[{Arrow[{{0,0,0},{1,0,1}}]}, Background -> Red]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="360" fill="rgb(255,255,255)"/>
<polyline points="10.0,281.8 350.0,78.2" fill="none" stroke="#333" stroke-width="1.5"/>
<polygon points="350.0,78.2 344.7,84.9 341.6,79.8" fill="#333"/>
</svg>
