tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__graphics3d_primitives__graphics3d_cone_default.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics3D[Cone[]]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="360" fill="rgb(255,255,255)"/>
<polygon points="180.0,10.0 216.5,170.9 176.5,168.4" fill="rgb(46,63,89)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 176.5,168.4 136.7,172.0" fill="rgb(47,65,91)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 254.0,179.5 216.5,170.9" fill="rgb(42,58,82)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 136.7,172.0 99.9,181.6" fill="rgb(46,64,89)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 286.5,193.5 254.0,179.5" fill="rgb(37,50,70)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 99.9,181.6 68.5,196.4" fill="rgb(43,59,83)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 311.7,212.0 286.5,193.5" fill="rgb(37,50,71)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 68.5,196.4 44.7,215.6" fill="rgb(38,52,72)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 328.0,233.7 311.7,212.0" fill="rgb(45,62,87)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 44.7,215.6 30.2,237.7" fill="rgb(35,49,68)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 334.2,257.1 328.0,233.7" fill="rgb(54,75,105)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 30.2,237.7 25.8,261.3" fill="rgb(44,60,84)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 329.8,280.7 334.2,257.1" fill="rgb(63,87,122)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 25.8,261.3 32.0,284.7" fill="rgb(53,73,102)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 315.3,302.8 329.8,280.7" fill="rgb(72,99,138)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 32.0,284.7 48.3,306.4" fill="rgb(62,85,120)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 291.5,321.9 315.3,302.8" fill="rgb(79,109,152)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 48.3,306.4 73.5,324.9" fill="rgb(71,97,136)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 260.1,336.8 291.5,321.9" fill="rgb(85,116,163)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 73.5,324.9 106.0,338.9" fill="rgb(78,107,150)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 223.3,346.4 260.1,336.8" fill="rgb(88,121,169)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 106.0,338.9 143.5,347.4" fill="rgb(84,115,161)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 183.5,350.0 223.3,346.4" fill="rgb(89,122,171)" stroke="#00000018" stroke-width="0.5"/>
<polygon points="180.0,10.0 143.5,347.4 183.5,350.0" fill="rgb(88,120,169)" stroke="#00000018" stroke-width="0.5"/>
</svg>
