tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__graphics3d_primitives__graphics3d_point.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics3D[Point[{0, 0, 0}]]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="360" fill="rgb(255,255,255)"/>
<circle cx="180.0" cy="180.0" r="3" fill="#333"/>
</svg>
