tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__graphics3d_primitives__graphics3d_polygon.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics3D[Polygon[{{0,0,0}, {1,0,0}, {0,1,0}}]]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="360" fill="rgb(255,255,255)"/>
<polygon points="30.0,220.0 330.0,316.7 194.2,43.3" fill="rgb(80,109,153)" stroke="#00000018" stroke-width="0.5"/>
</svg>
